[package]
name = "route-recognizer"
description = "Recognizes URL patterns with support for dynamic and wildcard segments"
license = "MIT"
repository = "https://github.com/rustasync/route-recognizer"
keywords = ["router", "url"]
edition = "2018"

version = "0.3.1"
authors = ["wycats", "rustasync"]

[dependencies]
sgx_tstd = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git", features = ["net"] }